<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="done">Done</string>
    <string name="new_task">New Task</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="save_task">Save Task</string>
    <string name="change_task_status">Change Task Status</string>
    <string name="change_status_button">Change Status</string>
</resources>